generated-in/docking/dcimgui_nodefaultargfunctions_internal.h

typedef struct ImVec2i_t ImVec2i;
typedef struct ImFontAtlasPostProcessData_t ImFontAtlasPostProcessData;  // Data available to potential texture post-processing functions
// Flags
typedef int ImDrawTextFlags;            // -> enum ImDrawTextFlags_         // Flags: for ImTextCalcWordWrapPositionEx()
//-----------------------------------------------------------------------------
// [SECTION] Generic helpers
// Note that the ImXXX helpers functions are lower-level than ImGui functions.
// ImGui functions or the ImGui context are never called/used from other ImXXX functions.
//-----------------------------------------------------------------------------
// - Helpers: Hashing
// - Helpers: Sorting
// - Helpers: Bit manipulation
// - Helpers: String
// - Helpers: Formatting
// - Helpers: UTF-8 <> wchar conversions
// - Helpers: ImVec2/ImVec4 operators
// - Helpers: Maths
// - Helpers: Geometry
// - Helper: ImVec1
// - Helper: ImVec2ih
// - Helper: ImRect
// - Helper: ImBitArray
// - Helper: ImBitVector
// - Helper: ImSpan<>, ImSpanAllocator<>
// - Helper: ImStableVector<>
// - Helper: ImPool<>
// - Helper: ImChunkStream<>
// - Helper: ImGuiTextIndex
// - Helper: ImGuiStorage
//-----------------------------------------------------------------------------

// Helpers: Hashing
CIMGUI_API ImGuiID     cImHashData(const void* data, size_t data_size, ImGuiID seed /* = 0 */);
CIMGUI_API ImGuiID     cImHashStr(const char* data, size_t data_size /* = 0 */, ImGuiID seed /* = 0 */);
CIMGUI_API const char* cImHashSkipUncontributingPrefix(const char* label);
// Helpers: Bit manipulation
CIMGUI_API bool         cImIsPowerOfTwo(int v);
CIMGUI_API bool         cImIsPowerOfTwoImU64(ImU64 v);
CIMGUI_API void*       cImMemdup(const void* src, size_t size);                             // Duplicate a chunk of memory.
CIMGUI_API ImVec2      cImFontCalcTextSizeEx(ImFont* font, float size, float max_width, float wrap_width, const char* text_begin, const char* text_end_display, const char* text_end, const char** out_remaining, ImVec2* out_offset, ImDrawTextFlags flags);
CIMGUI_API const char* cImFontCalcWordWrapPositionEx(ImFont* font, float size, const char* text, const char* text_end, float wrap_width, ImDrawTextFlags flags /* = 0 */);
CIMGUI_API float  cImLog(float x);                   // DragBehaviorT/SliderBehaviorT uses ImLog with either float/double and need the precision
CIMGUI_API double cImLogDouble(double x);
// - Misc maths helpers
CIMGUI_API ImVec2 cImMin(ImVec2 lhs, ImVec2 rhs);
CIMGUI_API ImVec2 cImMax(ImVec2 lhs, ImVec2 rhs);
CIMGUI_API ImVec2 cImLerp(ImVec2 a, ImVec2 b, float t);
CIMGUI_API ImVec2 cImLerpImVec2(ImVec2 a, ImVec2 b, ImVec2 t);
CIMGUI_API ImVec4 cImLerpImVec4(ImVec4 a, ImVec4 b, float t);
CIMGUI_API float  cImLengthSqr(ImVec2 lhs);
CIMGUI_API float  cImLengthSqrImVec4(ImVec4 lhs);
CIMGUI_API float  cImInvLength(ImVec2 lhs, float fail_value);
CIMGUI_API int    cImModPositive(int a, int b);
CIMGUI_API float  cImLinearSweep(float current, float target, float speed);
CIMGUI_API float  cImLinearRemapClamp(float s0, float s1, float d0, float d1, float x);
CIMGUI_API ImVec2 cImMul(ImVec2 lhs, ImVec2 rhs);
CIMGUI_API bool   cImIsFloatAboveGuaranteedIntegerPrecision(float f);
CIMGUI_API ImVec2 cImLineClosestPoint(ImVec2 a, ImVec2 b, ImVec2 p);
// Helper: ImVec2i (2D vector, integer)
struct ImVec2i_t
{
    int x, y;
};
// Helper: ImGuiStorage
CIMGUI_API ImGuiStoragePair* cImLowerBound(ImGuiStoragePair* in_begin, ImGuiStoragePair* in_end, ImGuiID key);
typedef enum
{
    ImGuiPlotType_Lines,
    ImGuiPlotType_Histogram,
} ImGuiPlotType;
// Plot
CIMGUI_API int ImGui_PlotEx(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 size_arg);
// Data available to potential texture post-processing functions
struct ImFontAtlasPostProcessData_t
{
    ImFontAtlas*    FontAtlas;
    ImFont*         Font;
    ImFontConfig*   FontSrc;
    ImFontBaked*    FontBaked;
    ImFontGlyph*    Glyph;

    // Pixel data
    void*           Pixels;
    ImTextureFormat Format;
    int             Pitch;
    int             Width;
    int             Height;
};
CIMGUI_API void           cImFontAtlasTextureMakeSpace(ImFontAtlas* atlas);
CIMGUI_API void           cImFontAtlasTextureRepack(ImFontAtlas* atlas, int w, int h);
CIMGUI_API void           cImFontAtlasTextureGrow(ImFontAtlas* atlas, int old_w /* = -1 */, int old_h /* = -1 */);
CIMGUI_API void           cImFontAtlasTextureCompact(ImFontAtlas* atlas);
CIMGUI_API ImVec2i        cImFontAtlasTextureGetSizeEstimate(ImFontAtlas* atlas);
CIMGUI_API void cImFontAtlasUpdateNewFrame(ImFontAtlas* atlas, int frame_count, bool renderer_has_textures);
CIMGUI_API void cImFontAtlasUpdateDrawListsTextures(ImFontAtlas* atlas, ImTextureRef old_tex, ImTextureRef new_tex);
CIMGUI_API void cImFontAtlasUpdateDrawListsSharedData(ImFontAtlas* atlas);
CIMGUI_API void cImFontAtlasTextureBlockConvert(const unsigned char* src_pixels, ImTextureFormat src_fmt, int src_pitch, unsigned char* dst_pixels, ImTextureFormat dst_fmt, int dst_pitch, int w, int h);
CIMGUI_API void cImFontAtlasTextureBlockPostProcess(ImFontAtlasPostProcessData* data);
CIMGUI_API void cImFontAtlasTextureBlockPostProcessMultiply(ImFontAtlasPostProcessData* data, float multiply_factor);
CIMGUI_API void cImFontAtlasTextureBlockFill(ImTextureData* dst_tex, int dst_x, int dst_y, int w, int h, ImU32 col);
CIMGUI_API void cImFontAtlasTextureBlockCopy(ImTextureData* src_tex, int src_x, int src_y, ImTextureData* dst_tex, int dst_x, int dst_y, int w, int h);
CIMGUI_API void cImFontAtlasTextureBlockQueueUpload(ImFontAtlas* atlas, ImTextureData* tex, int x, int y, int w, int h);