generated-out/vanilla/dear-imgui-raw-vanilla-internal/cbits/DearImGuiWrappers.h

void cImFontAtlasTextureGetSizeEstimate_wrap(ImFontAtlas* atlas, ImVec2i* _out);
void cImFontAtlasUpdateDrawListsTextures_wrap(ImFontAtlas* atlas, ImTextureRef const* old_tex, ImTextureRef const* new_tex);
void cImFontCalcTextSizeEx_wrap(ImFont* font, float size, float max_width, float wrap_width, const char* text_begin, const char* text_end_display, const char* text_end, const char** out_remaining, ImVec2* out_offset, ImDrawTextFlags flags, ImVec2* _out);
float cImInvLength_wrap(ImVec2 const* lhs, float fail_value);
float cImLengthSqr_wrap(ImVec2 const* lhs);
float cImLengthSqrImVec4_wrap(ImVec4 const* lhs);
void cImLerp_wrap(ImVec2 const* a, ImVec2 const* b, float t, ImVec2* _out);
void cImLerpImVec2_wrap(ImVec2 const* a, ImVec2 const* b, ImVec2 const* t, ImVec2* _out);
void cImLerpImVec4_wrap(ImVec4 const* a, ImVec4 const* b, float t, ImVec4* _out);
void cImLineClosestPoint_wrap(ImVec2 const* a, ImVec2 const* b, ImVec2 const* p, ImVec2* _out);
void cImMax_wrap(ImVec2 const* lhs, ImVec2 const* rhs, ImVec2* _out);
void cImMin_wrap(ImVec2 const* lhs, ImVec2 const* rhs, ImVec2* _out);
void cImMul_wrap(ImVec2 const* lhs, ImVec2 const* rhs, ImVec2* _out);
int ImGui_PlotEx_wrap(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* size_arg);