generated-out/docking/dear-imgui-raw-docking-internal/src/DearImGui/Raw/Internal.hsc

-- C: void ImFontAtlasTextureBlockConvert(const unsigned char* src_pixels, ImTextureFormat src_fmt, int src_pitch, unsigned char* dst_pixels, ImTextureFormat dst_fmt, int dst_pitch, int w, int h)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasTextureBlockConvert"
  cImFontAtlasTextureBlockConvert :: (Ptr CUChar) -> ImTextureFormat -> CInt -> (Ptr CUChar) -> ImTextureFormat -> CInt -> CInt -> CInt -> IO ()
-- C: void ImFontAtlasTextureBlockCopy(ImTextureData* src_tex, int src_x, int src_y, ImTextureData* dst_tex, int dst_x, int dst_y, int w, int h)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasTextureBlockCopy"
  cImFontAtlasTextureBlockCopy :: (Ptr ImTextureData) -> CInt -> CInt -> (Ptr ImTextureData) -> CInt -> CInt -> CInt -> CInt -> IO ()
-- C: void ImFontAtlasTextureBlockFill(ImTextureData* dst_tex, int dst_x, int dst_y, int w, int h, ImU32 col)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasTextureBlockFill"
  cImFontAtlasTextureBlockFill :: (Ptr ImTextureData) -> CInt -> CInt -> CInt -> CInt -> ImU32 -> IO ()
-- C: void ImFontAtlasTextureBlockPostProcess(ImFontAtlasPostProcessData* data)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasTextureBlockPostProcess"
  cImFontAtlasTextureBlockPostProcess :: (Ptr ImFontAtlasPostProcessData) -> IO ()
-- C: void ImFontAtlasTextureBlockPostProcessMultiply(ImFontAtlasPostProcessData* data, float multiply_factor)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasTextureBlockPostProcessMultiply"
  cImFontAtlasTextureBlockPostProcessMultiply :: (Ptr ImFontAtlasPostProcessData) -> CFloat -> IO ()
-- C: void ImFontAtlasTextureBlockQueueUpload(ImFontAtlas* atlas, ImTextureData* tex, int x, int y, int w, int h)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasTextureBlockQueueUpload"
  cImFontAtlasTextureBlockQueueUpload :: (Ptr ImFontAtlas) -> (Ptr ImTextureData) -> CInt -> CInt -> CInt -> CInt -> IO ()
-- C: void ImFontAtlasTextureCompact(ImFontAtlas* atlas)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasTextureCompact"
  cImFontAtlasTextureCompact :: (Ptr ImFontAtlas) -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h cImFontAtlasTextureGetSizeEstimate_wrap"
  c_cImFontAtlasTextureGetSizeEstimate :: (Ptr ImFontAtlas) -> (Ptr ImVec2i) -> IO ()

cImFontAtlasTextureGetSizeEstimate :: (Ptr ImFontAtlas) -> IO ImVec2i
cImFontAtlasTextureGetSizeEstimate atlas =
  alloca $ \_pOut -> c_cImFontAtlasTextureGetSizeEstimate atlas _pOut >> peek _pOut

-- C: void ImFontAtlasTextureGrow(ImFontAtlas* atlas, int old_w, int old_h)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasTextureGrow"
  cImFontAtlasTextureGrow :: (Ptr ImFontAtlas) -> CInt -> CInt -> IO ()
-- C: void ImFontAtlasTextureMakeSpace(ImFontAtlas* atlas)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasTextureMakeSpace"
  cImFontAtlasTextureMakeSpace :: (Ptr ImFontAtlas) -> IO ()
-- C: void ImFontAtlasTextureRepack(ImFontAtlas* atlas, int w, int h)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasTextureRepack"
  cImFontAtlasTextureRepack :: (Ptr ImFontAtlas) -> CInt -> CInt -> IO ()
-- C: void ImFontAtlasUpdateDrawListsSharedData(ImFontAtlas* atlas)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasUpdateDrawListsSharedData"
  cImFontAtlasUpdateDrawListsSharedData :: (Ptr ImFontAtlas) -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h cImFontAtlasUpdateDrawListsTextures_wrap"
  c_cImFontAtlasUpdateDrawListsTextures :: (Ptr ImFontAtlas) -> (Ptr ImTextureRef) -> (Ptr ImTextureRef) -> IO ()

cImFontAtlasUpdateDrawListsTextures :: (Ptr ImFontAtlas) -> ImTextureRef -> ImTextureRef -> IO ()
cImFontAtlasUpdateDrawListsTextures atlas old_tex new_tex =
  with old_tex $ \_p1 -> with new_tex $ \_p2 -> c_cImFontAtlasUpdateDrawListsTextures atlas _p1 _p2

-- C: void ImFontAtlasUpdateNewFrame(ImFontAtlas* atlas, int frame_count, bool renderer_has_textures)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontAtlasUpdateNewFrame"
  cImFontAtlasUpdateNewFrame :: (Ptr ImFontAtlas) -> CInt -> CBool -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h cImFontCalcTextSizeEx_wrap"
  c_cImFontCalcTextSizeEx :: (Ptr ImFont) -> CFloat -> CFloat -> CFloat -> CString -> CString -> CString -> (Ptr CString) -> (Ptr ImVec2) -> ImDrawTextFlags -> (Ptr ImVec2) -> IO ()

cImFontCalcTextSizeEx :: (Ptr ImFont) -> CFloat -> CFloat -> CFloat -> CString -> CString -> CString -> (Ptr CString) -> (Ptr ImVec2) -> ImDrawTextFlags -> IO ImVec2
cImFontCalcTextSizeEx font size max_width wrap_width text_begin text_end_display text_end out_remaining out_offset flags =
  alloca $ \_pOut -> c_cImFontCalcTextSizeEx font size max_width wrap_width text_begin text_end_display text_end out_remaining out_offset flags _pOut >> peek _pOut

-- C: const char* ImFontCalcWordWrapPositionEx(ImFont* font, float size, const char* text, const char* text_end, float wrap_width, ImDrawTextFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImFontCalcWordWrapPositionEx"
  cImFontCalcWordWrapPositionEx :: (Ptr ImFont) -> CFloat -> CString -> CString -> CFloat -> ImDrawTextFlags -> IO CString
-- C: ImGuiID ImHashData(const void* data, size_t data_size, ImGuiID seed)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImHashData"
  cImHashData :: (Ptr ()) -> CSize -> ImGuiID -> IO ImGuiID
-- C: const char* ImHashSkipUncontributingPrefix(const char* label)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImHashSkipUncontributingPrefix"
  cImHashSkipUncontributingPrefix :: CString -> IO CString
-- C: ImGuiID ImHashStr(const char* data, size_t data_size, ImGuiID seed)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImHashStr"
  cImHashStr :: CString -> CSize -> ImGuiID -> IO ImGuiID
foreign import capi unsafe "DearImGuiWrappers.h cImInvLength_wrap"
  c_cImInvLength :: (Ptr ImVec2) -> CFloat -> IO CFloat

cImInvLength :: ImVec2 -> CFloat -> IO CFloat
cImInvLength lhs fail_value =
  with lhs $ \_p0 -> c_cImInvLength _p0 fail_value

-- C: bool ImIsFloatAboveGuaranteedIntegerPrecision(float f)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImIsFloatAboveGuaranteedIntegerPrecision"
  cImIsFloatAboveGuaranteedIntegerPrecision :: CFloat -> IO CBool
-- C: bool ImIsPowerOfTwo(int v)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImIsPowerOfTwo"
  cImIsPowerOfTwo :: CInt -> IO CBool
-- C: bool ImIsPowerOfTwo(ImU64 v)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImIsPowerOfTwoImU64"
  cImIsPowerOfTwoImU64 :: ImU64 -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h cImLengthSqr_wrap"
  c_cImLengthSqr :: (Ptr ImVec2) -> IO CFloat

cImLengthSqr :: ImVec2 -> IO CFloat
cImLengthSqr lhs =
  with lhs $ \_p0 -> c_cImLengthSqr _p0

foreign import capi unsafe "DearImGuiWrappers.h cImLengthSqrImVec4_wrap"
  c_cImLengthSqrImVec4 :: (Ptr ImVec4) -> IO CFloat

cImLengthSqrImVec4 :: ImVec4 -> IO CFloat
cImLengthSqrImVec4 lhs =
  with lhs $ \_p0 -> c_cImLengthSqrImVec4 _p0

foreign import capi unsafe "DearImGuiWrappers.h cImLerp_wrap"
  c_cImLerp :: (Ptr ImVec2) -> (Ptr ImVec2) -> CFloat -> (Ptr ImVec2) -> IO ()

cImLerp :: ImVec2 -> ImVec2 -> CFloat -> IO ImVec2
cImLerp a b t =
  with a $ \_p0 -> with b $ \_p1 -> alloca $ \_pOut -> c_cImLerp _p0 _p1 t _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h cImLerpImVec2_wrap"
  c_cImLerpImVec2 :: (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO ()

cImLerpImVec2 :: ImVec2 -> ImVec2 -> ImVec2 -> IO ImVec2
cImLerpImVec2 a b t =
  with a $ \_p0 -> with b $ \_p1 -> with t $ \_p2 -> alloca $ \_pOut -> c_cImLerpImVec2 _p0 _p1 _p2 _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h cImLerpImVec4_wrap"
  c_cImLerpImVec4 :: (Ptr ImVec4) -> (Ptr ImVec4) -> CFloat -> (Ptr ImVec4) -> IO ()

cImLerpImVec4 :: ImVec4 -> ImVec4 -> CFloat -> IO ImVec4
cImLerpImVec4 a b t =
  with a $ \_p0 -> with b $ \_p1 -> alloca $ \_pOut -> c_cImLerpImVec4 _p0 _p1 t _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h cImLineClosestPoint_wrap"
  c_cImLineClosestPoint :: (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO ()

cImLineClosestPoint :: ImVec2 -> ImVec2 -> ImVec2 -> IO ImVec2
cImLineClosestPoint a b p =
  with a $ \_p0 -> with b $ \_p1 -> with p $ \_p2 -> alloca $ \_pOut -> c_cImLineClosestPoint _p0 _p1 _p2 _pOut >> peek _pOut

-- C: float ImLinearRemapClamp(float s0, float s1, float d0, float d1, float x)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImLinearRemapClamp"
  cImLinearRemapClamp :: CFloat -> CFloat -> CFloat -> CFloat -> CFloat -> IO CFloat
-- C: float ImLinearSweep(float current, float target, float speed)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImLinearSweep"
  cImLinearSweep :: CFloat -> CFloat -> CFloat -> IO CFloat
-- C: float ImLog(float x)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImLog"
  cImLog :: CFloat -> IO CFloat
-- C: double ImLog(double x)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImLogDouble"
  cImLogDouble :: CDouble -> IO CDouble
-- C: ImGuiStoragePair* ImLowerBound(ImGuiStoragePair* in_begin, ImGuiStoragePair* in_end, ImGuiID key)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImLowerBound"
  cImLowerBound :: (Ptr ImGuiStoragePair) -> (Ptr ImGuiStoragePair) -> ImGuiID -> IO (Ptr ImGuiStoragePair)
foreign import capi unsafe "DearImGuiWrappers.h cImMax_wrap"
  c_cImMax :: (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO ()

cImMax :: ImVec2 -> ImVec2 -> IO ImVec2
cImMax lhs rhs =
  with lhs $ \_p0 -> with rhs $ \_p1 -> alloca $ \_pOut -> c_cImMax _p0 _p1 _pOut >> peek _pOut

-- C: void* ImMemdup(const void* src, size_t size)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImMemdup"
  cImMemdup :: (Ptr ()) -> CSize -> IO (Ptr ())
foreign import capi unsafe "DearImGuiWrappers.h cImMin_wrap"
  c_cImMin :: (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO ()

cImMin :: ImVec2 -> ImVec2 -> IO ImVec2
cImMin lhs rhs =
  with lhs $ \_p0 -> with rhs $ \_p1 -> alloca $ \_pOut -> c_cImMin _p0 _p1 _pOut >> peek _pOut

-- C: int ImModPositive(int a, int b)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImModPositive"
  cImModPositive :: CInt -> CInt -> IO CInt
foreign import capi unsafe "DearImGuiWrappers.h cImMul_wrap"
  c_cImMul :: (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO ()

cImMul :: ImVec2 -> ImVec2 -> IO ImVec2
cImMul lhs rhs =
  with lhs $ \_p0 -> with rhs $ \_p1 -> alloca $ \_pOut -> c_cImMul _p0 _p1 _pOut >> peek _pOut
